# apps/backend/main/src/entities/profile/controller/mod.rs
@@ -1,1 +1,2 @@
 pub mod get_profile;
+pub mod update_profile;
