# apps/backend/main/src/entities/profile/router.rs
@@ -4,5 +4,9 @@ pub fn init(state: crate::types::app_state::AppState) -> axum::Router<crate::typ
             "/profile",
             axum::routing::get(super::controller::get_profile::get_profile),
         )
+        .route(
+            "/profile",
+            axum::routing::put(super::controller::update_profile::update_profile),
+        )
         .layer(axum::middleware::from_fn_with_state(state, utils::auth_middleware::auth_guard))
 }
