# apps/backend/main/src/entities/user/db/repository.rs
@@ -1,6 +1,7 @@
 use sql::shared::{
     traits::{
-        PostgresqlRepositoryCreate, PostgresqlRepositoryGetOneById, RepositoryBase, UpdateDto,
+        PostgresqlRepositoryCreate, PostgresqlRepositoryGetOneById, PostgresqlRepositoryUpdate,
+        RepositoryBase, UpdateDto,
     },
     types::SortOrder,
 };
@@ -112,6 +113,56 @@ impl PostgresqlRepositoryCreate for UserRepository {
     }
 }
 
+impl PostgresqlRepositoryUpdate for UserRepository {
+    type UpdateDto = super::dto::UpdateUserDto;
+
+    async fn update<'a>(
+        executor: impl sqlx::Executor<'a, Database = Postgres>,
+        id: Uuid,
+        dto: Self::UpdateDto,
+    ) -> Result<Self::Response, sqlx::Error> {
+        if dto.is_empty() {
+            return Self::get_one_by_id(executor, id).await;
+        }
+
+        let mut query_builder = sqlx::QueryBuilder::new("UPDATE users SET ");
+
+        let mut separated = query_builder.separated(", ");
+
+        if let Some(email) = dto.email {
+            separated.push("email = ").push_bind_unseparated(email);
+        }
+
+        if let Some(is_active) = dto.is_active {
+            separated
+                .push("is_active = ")
+                .push_bind_unseparated(is_active);
+        }
+
+        if let Some(picture) = dto.picture {
+            separated.push("picture = ").push_bind_unseparated(picture);
+        }
+
+        if let Some(username) = dto.username {
+            separated
+                .push("username = ")
+                .push_bind_unseparated(username);
+        }
+
+        separated
+            .push("updated_at = ")
+            .push_bind_unseparated(chrono::Utc::now());
+
+        query_builder
+            .push(" WHERE id = ")
+            .push_bind(id)
+            .push(" RETURNING *")
+            .build_query_as::<User>()
+            .fetch_one(executor)
+            .await
+    }
+}
+
 impl UserRepository {
     // pub async fn get_one_by_email<'a>(
     //     executor: impl sqlx::Executor<'a, Database = Postgres>,
@@ -138,10 +189,8 @@ impl UserRepository {
         authentik_id: i32,
         dto: UpdateUserDto,
     ) -> Result<User, sqlx::Error> {
-        let current = Self::get_one_by_authentik_id(executor.clone(), authentik_id).await?;
-
-        if dto.is_empty() || !dto.has_changes(&current) {
-            return Ok(current);
+        if dto.is_empty() {
+            return Self::get_one_by_authentik_id(executor.clone(), authentik_id).await;
         }
 
         let mut query_builder = sqlx::QueryBuilder::new("UPDATE users SET ");
